src/assets/scss/components/git.scss
.git {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    box-sizing: content-box; 
    padding-right: 17px;
    
    &__item {
        width: 105%;
        height: 75px;
        display: flex;
        align-content: center;
        flex-shrink: 0;
        border-radius: 10px;
        background-color: $color-black-light;
        margin-bottom: 25px;
    }

    &__icon {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 0 20px;

        img {
            width: 40px;
            height: 40px;

        }
    }

    &__content {
        display: flex;
        justify-content: center;
        flex-direction: column;
        font-size: 13px;
        padding-right: 10px;
        overflow: hidden;

        span {
            width: 100%;
            text-overflow: ellipsis;
            overflow: hidden;
            white-space: nowrap;
        }

        small {
            font-size: 10px;
        }
    }

    &__spacer {
        width: 100%;
        padding: 10px 0;
    }
}

